src/mni1670/JustSimpleGrammar.java
/* Generated By:JavaCC: Do not edit this line. JustSimpleGrammar.java */
package mni1670;
import java.io.FileInputStream;
import utils.*;
import utils.Symbol.*;

public class JustSimpleGrammar implements JustSimpleGrammarConstants {
  public static SymbolTable symbolTable;
  public static void main(String args []) throws ParseException
  {
    try
    {
      symbolTable = new SymbolTable();

      JustSimpleGrammar parser = new JustSimpleGrammar(new FileInputStream("code.txt"));

        System.out.println("Reading ...");
        try
        {
          switch (parser.start())
          {
            case 0:
            System.out.println("Finished");
            symbolTable.printSymbols();
            break;
            case 1:
            System.out.println("Finished");
            symbolTable.printSymbols();
            break;
          }
        }
        catch (Exception e)
        {
          e.printStackTrace();
          System.out.println("Could not parse input.");
          System.out.println(e.getMessage());
        }
        catch (Error e)
        {
            e.printStackTrace();
          System.out.println("Oops.");
          System.out.println(e.getMessage());
        }
    }
    catch (Exception ex)
    {
      System.out.println("Something went wrong: " + ex.getMessage());
    }
  }

  final public int start() throws ParseException {
    if (jj_2_1(2)) {
      compilationUnit();
      jj_consume_token(0);
    {if (true) return 0;}
    } else if (jj_2_2(2)) {
      jj_consume_token(0);
    {if (true) return 1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void compilationUnit() throws ParseException {
        Symbol symbol;
        Token token;
    jj_consume_token(PROGRAM);
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Undefined;
                symbolTable.insert(symbol);
         }
    jj_consume_token(OPEN);
    definition();
    jj_consume_token(CLOSE);
  }

  final public void definition() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_4(3)) {
        varDef();
      } else if (jj_2_5(2)) {
        funcDef();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void type() throws ParseException {
    if (jj_2_8(2)) {
      jj_consume_token(NO_RETURN_TYPE);
    } else if (jj_2_9(2)) {
      jj_consume_token(INT_TYPE);
      if (jj_2_7(2)) {
        jj_consume_token(BRACETS_OPEN);
        if (jj_2_6(2)) {
          jj_consume_token(NUMBER);
        } else {
          ;
        }
        jj_consume_token(BRACETS_CLOSE);
      } else {
        ;
      }
    } else if (jj_2_10(2)) {
      jj_consume_token(BOOLEAN_TYPE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void init() throws ParseException {
    jj_consume_token(ASSIGNMENT);
    if (jj_2_11(2)) {
      jj_consume_token(NUMBER);
    } else if (jj_2_12(2)) {
      jj_consume_token(TRUE);
    } else if (jj_2_13(2)) {
      jj_consume_token(FALSE);
    } else if (jj_2_14(2)) {
      arrayInit();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void arrayInit() throws ParseException {
    jj_consume_token(NEW);
    type();
  }

  final public void varDef() throws ParseException {
        Symbol symbol;
        Token token;
    type();
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Variable;
                symbolTable.insert(symbol);
         }
    if (jj_2_15(2)) {
      init();
    } else {
      ;
    }
    jj_consume_token(STATEMENT_CLOSE);
  }

  final public void funcDef() throws ParseException {
    funcHead();
    block();
  }

  final public void funcHead() throws ParseException {
        Symbol symbol;
        Token token;
    type();
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Function;
                symbolTable.insert(symbol);
         }
    jj_consume_token(BRACE_OPEN);
    if (jj_2_16(2)) {
      formParList();
    } else {
      ;
    }
    jj_consume_token(BRACE_CLOSE);
  }

  final public void formParList() throws ParseException {
        Symbol symbol;
        Token token;
    if (jj_2_17(2)) {
      jj_consume_token(BY_REF);
    } else {
      ;
    }
    type();
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Parameter;
                symbolTable.insert(symbol);
         }
    label_2:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(SEPERATOR);
      if (jj_2_19(2)) {
        jj_consume_token(BY_REF);
      } else {
        ;
      }
      type();
      token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Parameter;
                symbolTable.insert(symbol);
         }
    }
  }

  final public void block() throws ParseException {
    jj_consume_token(OPEN);
    label_3:
    while (true) {
      if (jj_2_20(2)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_21(2)) {
        varDef();
      } else if (jj_2_22(2)) {
        stat();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(CLOSE);
  }

  final public void stat() throws ParseException {
    if (jj_2_23(2)) {
      assignStat();
    } else if (jj_2_24(2)) {
      callStat();
    } else if (jj_2_25(2)) {
      ifStat();
    } else if (jj_2_26(2)) {
      whileStat();
    } else if (jj_2_27(2)) {
      returnStat();
    } else if (jj_2_28(2)) {
      block();
    } else if (jj_2_29(2)) {
      jj_consume_token(STATEMENT_CLOSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void assignStat() throws ParseException {
        Token token;
        Symbol symbol;
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Variable;
                symbolTable.insert(symbol);
         }
    jj_consume_token(ASSIGNMENT);
    expr();
    jj_consume_token(STATEMENT_CLOSE);

  }

  final public void callStat() throws ParseException {
    call();
    jj_consume_token(STATEMENT_CLOSE);
  }

  final public void call() throws ParseException {
        Symbol symbol;
        Token token;
    token = jj_consume_token(IDENTIFIER);
         symbol = symbolTable.lookup(token.image);
         if(symbol == null) {
                symbol = new Symbol();
                symbol.name = token.image;
                symbol.kind = Kind.Function;
                symbolTable.insert(symbol);
         }
    jj_consume_token(BRACE_OPEN);
    if (jj_2_30(2)) {
      actParList();
    } else {
      ;
    }
    jj_consume_token(BRACE_CLOSE);
  }

  final public void actParList() throws ParseException {
    expr();
    label_4:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(SEPERATOR);
      expr();
    }
  }

  final public void ifStat() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(BRACE_OPEN);
    expr();
    jj_consume_token(BRACE_CLOSE);
    stat();
    if (jj_2_32(2)) {
      jj_consume_token(ELSE);
      stat();
    } else {
      ;
    }
  }

  final public void whileStat() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(BRACE_OPEN);
    expr();
    jj_consume_token(BRACE_CLOSE);
    stat();
  }

  final public void returnStat() throws ParseException {
    jj_consume_token(RETURN);
    if (jj_2_33(2)) {
      expr();
    } else {
      ;
    }
    jj_consume_token(STATEMENT_CLOSE);
  }

  final public void expr() throws ParseException {
    orExpr();
  }

  final public void orExpr() throws ParseException {
    andExpr();
    label_5:
    while (true) {
      if (jj_2_34(2)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(OR);
      andExpr();
    }
  }

  final public void andExpr() throws ParseException {
    relExpr();
    label_6:
    while (true) {
      if (jj_2_35(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(AND);
      relExpr();
    }
  }

  final public void relExpr() throws ParseException {
    simpleExpr();
    if (jj_2_42(2)) {
      if (jj_2_36(2)) {
        jj_consume_token(EQUAL);
      } else if (jj_2_37(2)) {
        jj_consume_token(NOT_EQUAL);
      } else if (jj_2_38(2)) {
        jj_consume_token(LESS);
      } else if (jj_2_39(2)) {
        jj_consume_token(LESS_OR_EQUAL);
      } else if (jj_2_40(2)) {
        jj_consume_token(GREATER);
      } else if (jj_2_41(2)) {
        jj_consume_token(GREATER_OR_EQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      simpleExpr();
    } else {
      ;
    }
  }

  final public void simpleExpr() throws ParseException {
    if (jj_2_45(2)) {
      if (jj_2_43(2)) {
        jj_consume_token(PLUS);
      } else if (jj_2_44(2)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    term();
    label_7:
    while (true) {
      if (jj_2_46(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_47(2)) {
        jj_consume_token(PLUS);
      } else if (jj_2_48(2)) {
        jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
    }
  }

  final public void term() throws ParseException {
    notFact();
    label_8:
    while (true) {
      if (jj_2_49(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_50(2)) {
        jj_consume_token(MUL);
      } else if (jj_2_51(2)) {
        jj_consume_token(DIV);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      notFact();
    }
  }

  final public void notFact() throws ParseException {
    if (jj_2_52(2)) {
      jj_consume_token(NOT);
    } else {
      ;
    }
    fact();
  }

  final public void fact() throws ParseException {
        Symbol symbol;
        Token token;
    if (jj_2_59(2)) {
      jj_consume_token(NUMBER);
    } else if (jj_2_60(2)) {
      jj_consume_token(IDENTIFIER);
      if (jj_2_54(2)) {
        jj_consume_token(BRACE_OPEN);
        if (jj_2_53(2)) {
          actParList();
        } else {
          ;
        }
        jj_consume_token(BRACE_CLOSE);
      } else {
        ;
      }
      if (jj_2_57(2)) {
        jj_consume_token(BRACETS_OPEN);
        if (jj_2_55(2)) {
          jj_consume_token(IDENTIFIER);
        } else if (jj_2_56(2)) {
          jj_consume_token(NUMBER);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(BRACETS_CLOSE);
      } else {
        ;
      }
      label_9:
      while (true) {
        if (jj_2_58(2)) {
          ;
        } else {
          break label_9;
        }
        jj_consume_token(ACCESS);
        jj_consume_token(IDENTIFIER);
      }
    } else if (jj_2_61(2)) {
      jj_consume_token(BRACE_OPEN);
      expr();
      jj_consume_token(BRACE_CLOSE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }
